:construction_worker: Fixing Linux with clang CI build.

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,8 @@ addons:
   apt:
     sources:
       - ubuntu-toolchain-r-test
+    packages:
+      - g++-7
   homebrew:
     packages:
       - cmake
