:sparkles: Added vector classes.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,7 +33,7 @@ endif()
 set(HEADERS_CONNECTION include/lambdacommon/connection/address.h)
 set(HEADERS_DOCUMENT include/lambdacommon/documents/document.h)
 set(HEADERS_GRAPHICS include/lambdacommon/graphics/color.h include/lambdacommon/graphics/scene.h)
-set(HEADERS_MATHS include/lambdacommon/maths.h include/lambdacommon/maths/geometry/geometry.h include/lambdacommon/maths/geometry/point.h)
+set(HEADERS_MATHS include/lambdacommon/maths.h include/lambdacommon/maths/geometry/geometry.h include/lambdacommon/maths/geometry/point.h include/lambdacommon/maths/geometry/vector.h)
 set(HEADERS_FILESYSTEM include/lambdacommon/system/fs/filesystem.h)
 set(HEADERS_EXCEPTIONS include/lambdacommon/exceptions/exceptions.h)
 set(HEADERS_SYSTEM ${HEADERS_FILESYSTEM} include/lambdacommon/system/system.h include/lambdacommon/system/terminal.h include/lambdacommon/system/fs.h include/lambdacommon/system/os.h include/lambdacommon/system/devices.h include/lambdacommon/system/input.h include/lambdacommon/system/uri.h include/lambdacommon/system/time.h)
