--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "cmake"]
 	path = cmake
-	url = https://github.com/AperLambda/LambdaCMakeModules.git
+	url = https://github.com/LambdAurora/lcmm.git
